# intfnd

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 002_tables.sql  003_gist_index.sql  004_sync_tracking.sql  005_polyline.sql  006_segment_id.sql  007_drop_strava_add_surface.sql  008_rename_to_climbs.sql  009_way_ids_constraints.sql  010_auto_is_paved.sql  011_ways.sql  012_constaints.sql  013_proto_climbs.sql  014_proto_add_distance.sql  015_proto_nodes_hash.sql  016_drop_public_intermediate.sql  017_climbs_region.sql  018_climbs_start_latlng_index.sql
osm/: chain.py  climb.py  combine.py  debug.py  dedupe.py  degree.py  elevation.py  geo.py  osm_load.py  pipeline.py  requirements.txt  schema.sql  score.py  strip.py  surface.py
scripts/: import_osm_climbs.py  requirements.txt
scripts/osm_climbs/: __init__.py  chains.py  combine.py  db.py  debug.py  dedupe.py  detect.py  elevation.py  geo.py  geojson_out.py  osm_load.py  pipeline.py  score.py  strip.py  surface.py
src/: config.rs  db.rs  enrich.rs  main.rs  mcp.rs  models.rs  physics.rs  sync.rs
src/routes/: auth.rs  climb.rs  explore.rs  mod.rs  pages.rs  search.rs  sync.rs
src/strava/: client.rs  mod.rs  rate_limiter.rs  types.rs
templates/: about.html  climb.html  explore.html  index.html  login.html  predictor.html  progress.html
